added styling to the footer

--- a/project-sandbox-little-lemon/styles.css
+++ b/project-sandbox-little-lemon/styles.css
@@ -38,3 +38,15 @@ section {
 article {
     flex: 1;
 }
+
+footer {
+    display: flex;
+}
+
+footer div {
+    flex: 1;
+}
+
+div > img {
+    width: 5rem;
+}
