--- a/project-sandbox-little-lemon/styles.css
+++ b/project-sandbox-little-lemon/styles.css
@@ -8,8 +8,12 @@ body {
 }
 
 h1 {
+    text-align: center;
     font-size: 3rem;
     margin-left: 5%;
+    font-family: 'Lobster', cursive;
+    
+   
 }
 
 h2 {
