--- a/project-sandbox-little-lemon/styles.css
+++ b/project-sandbox-little-lemon/styles.css
@@ -11,9 +11,20 @@ h1 {
     text-align: center;
     font-size: 3rem;
     margin-left: 5%;
+    color:#49796B;
     font-family: 'Lobster', cursive;
-    
-   
+    animation: fadeInAnimation ease 3s;
+    animation-iteration-count: 1;
+    animation-fill-mode: forwards;
+}
+
+@keyframes fadeInAnimation {
+    0% {
+        opacity: 0;
+    }
+    100% {
+        opacity: 1;
+    }
 }
 
 h2 {
