--- a/project-sandbox-little-lemon/styles.css
+++ b/project-sandbox-little-lemon/styles.css
@@ -54,6 +54,7 @@ h1 {
     text-align: center;
     vertical-align: middle;
     font-size: 1.5rem;
+    padding-bottom: 2rem;
 }
 
 h1, .sub-heading {
@@ -73,17 +74,35 @@ h1, .sub-heading {
 
 /*Cards section*/
 
-.card {
-    box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
-    transition: 0.3s;
-}
-.card:hover {
-box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2);
+.container {
+    padding: 10px 20px;
+    margin: 0 auto;
+    display: flex;
+    max-width: 100%;
+    flex-wrap: wrap;
+    justify-content: center;
 }
 
-.container {
-    padding: 2px 16px;
+.card {
+    box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
+    transition: transform .2s;
+    box-sizing: border-box;
+    width: calc(33.33% - 40px);
+    margin: 10px 20px;
+    
 }
+
+.card:hover {
+box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2);
+transform: scale(1.2);
+}
+
+card img {
+    width: 100%;
+    height: 200px;
+    object-fit: cover;
+}
+
 
 h2 {
     font-size: 2rem;
@@ -91,9 +110,13 @@ h2 {
     color: #c8102E;
 }
 
-
-
-
+@media (max-width: 768px) {
+    .card {
+        width: 100%;
+        margin: 10px 0;
+        padding: 10px 20px;
+    }
+}
 
 section {
     display: flex;
