--- a/project-sandbox-little-lemon/styles.css
+++ b/project-sandbox-little-lemon/styles.css
@@ -15,6 +15,7 @@ body {
     position: fixed;
     top: 0;
     width: 100%;
+    z-index: 1000;
 }
 
 .navbar a {
@@ -29,7 +30,7 @@ body {
 
 .navbar a:hover {
 background: #c8102E;
-color: #FFC72C;
+color: #EDEFEE;
 }
 
 /*Main heading and sub-heading*/
@@ -39,7 +40,8 @@ header > img {
     margin-left:auto;
     margin-right: auto;
     padding-top: 3rem;
-    width: 40rem;
+    width: 100%;
+    max-width: 400px;
 }
 
 h1 {
@@ -55,9 +57,10 @@ h1 {
     vertical-align: middle;
     font-size: 1.5rem;
     padding-bottom: 2rem;
+    
 }
 
-h1, .sub-heading {
+h1, .sub-heading, header > img {
     animation: fadeInAnimation ease 3s;
     animation-iteration-count: 1;
     animation-fill-mode: forwards;
@@ -74,6 +77,7 @@ h1, .sub-heading {
 
 /*Cards section*/
 
+
 .container {
     padding: 10px 20px;
     margin: 0 auto;
@@ -84,17 +88,20 @@ h1, .sub-heading {
 }
 
 .card {
-    box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
-    transition: transform .2s;
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
+    transition: transform 0.2s;
     box-sizing: border-box;
     width: calc(33.33% - 40px);
-    margin: 10px 20px;
-    
+    margin: 10px;
+    padding: 10px 20px;
+    display: flex;
+    flex-direction: column;
+
 }
 
 .card:hover {
 box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2);
-transform: scale(1.2);
+transform: scale(1.1);
 }
 
 card img {
@@ -110,11 +117,43 @@ h2 {
     color: #c8102E;
 }
 
-@media (max-width: 768px) {
+button {
+    background-color: #c8102E;
+    border: none;
+    color: #EDEFEE;
+    padding: 10px 20px;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+    font-size: 14px;
+}
+
+button:hover {
+    background: #49796B;
+    color: #EDEFEE;
+    }
+
+/* Media queries for responsive design */
+
+@media screen and (max-width: 767px) {
+    header > img {
+        padding: 2rem 0;
+    }
+
+
+    .container {
+        flex-direction: column; /* Stack cards vertically */
+    }
+
     .card {
-        width: 100%;
+        box-sizing: border-box;
+        width: 100%; 
         margin: 10px 0;
-        padding: 10px 20px;
+        padding: 10px 20px; 
+    }
+
+    .card img {
+        height: auto; 
     }
 }
 
