--- a/project-sandbox-little-lemon/styles.css
+++ b/project-sandbox-little-lemon/styles.css
@@ -104,10 +104,11 @@ box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2);
 transform: scale(1.1);
 }
 
-card img {
+.card img {
     width: 100%;
     height: 200px;
     object-fit: cover;
+    border-radius: 25px;
 }
 
 
@@ -154,6 +155,7 @@ button:hover {
 
     .card img {
         height: auto; 
+        border-radius: 50px;
     }
 }
 
