--- a/project-sandbox-little-lemon/styles.css
+++ b/project-sandbox-little-lemon/styles.css
@@ -82,8 +82,7 @@ h1, .sub-heading, header > img {
     }
 }
 
-/*Cards section*/
-
+/*Cards style*/
 
 .container {
     padding: 10px 20px;
@@ -169,6 +168,8 @@ button:hover {
     }
 }
 
+/*Footer style*/
+
 footer {
     color:#49796B;
     padding: 20px 0;
@@ -181,16 +182,27 @@ footer {
     flex: 1;
     padding: 0 20px;
     text-align: center;
+    display:flex;
+    align-items: center;
 }
 
 .footer-column img {
-    max-width: 100px;
+    max-width: 50px;
     margin-bottom: 10px;
 }
 
 .footer-column p {
     margin: 5px 0;
     font-size: 14px;
+}
+
+.footer-column:first-child {
+    justify-content: flex-end; /* Align logo to the right */
+}
+
+/* Adjust text alignment */
+.footer-column:last-child {
+    justify-content: flex-start; /* Align text to the left */
 }
 
 
@@ -202,12 +214,6 @@ article {
     flex: 1;
 }
 
-
-
 footer div {
     flex: 1;
-}
-
-div > img {
-    width: 5rem;
 }
