--- a/project-sandbox-little-lemon/styles.css
+++ b/project-sandbox-little-lemon/styles.css
@@ -52,7 +52,13 @@ h1 {
     margin-left: 5%;
     text-align: center;
     font-family: 'Lobster', cursive;
+    transition: transform 2s;
 }
+
+h1:hover {
+    color:#c8102E;
+    transform: scale(1.5);
+    }
 
  .sub-heading {
     color:#49796B;
