--- a/project-sandbox-little-lemon/styles.css
+++ b/project-sandbox-little-lemon/styles.css
@@ -9,19 +9,36 @@ body {
 
 /*Navbar section*/
 
+header {
+    background-color: #EDEFEE;
+    padding: 1rem 0;
+    text-align: center;
+}
+
+.header-content {
+    display: inline-block;
+    position: relative;
+}
+
+.logo {
+    max-width: 900px;
+}
+
 .navbar {
     background-color: #49796B;
+    border-radius: 25px;
     overflow: hidden;
-    position: fixed;
-    top: 0;
+    position: absolute;
+    top: 100%;;
+    left: 0;
     width: 100%;
     z-index: 1000;
+    
 }
 
 .navbar a {
     color:  #EDEFEE;
-    display: block;
-    float: right;
+    display: inline-block;
     padding: 14px 16px;
     text-align: center;
     text-decoration: none;
@@ -37,14 +54,7 @@ color: #EDEFEE;
 
 /*Main heading and sub-heading*/
 
-header > img {
-    display: block;
-    margin-left:auto;
-    margin-right: auto;
-    max-width: 900px;
-    padding-top: 3rem;
-    width: 100%;
-}
+
 
 h1 {
     color:#49796B;
@@ -118,7 +128,7 @@ h1, .sub-heading, header > img {
 }
 
 .card:hover {
-background-color: #FFF8DC;
+background-color:#FFE5B4;
 box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2);
 transform: scale(1.2);
 }
@@ -194,10 +204,25 @@ footer {
 /* Media queries for responsive design */
 
 @media screen and (max-width: 767px) {
-    header > img {
-        padding: 2rem 0;
+    header {
+        padding: 0.5rem 0; 
+    }
+    
+    .header-content {
+        flex-direction: column; 
+        align-items: center;
     }
 
+    .logo {
+        max-width: 100%;
+    }
+    
+    .navbar {
+        position: static; 
+        width: 100%; 
+        background-color: #49796B;
+        margin-top: 1rem; 
+    }
 
     .container {
         display: flex;
