--- a/project-sandbox-little-lemon/styles.css
+++ b/project-sandbox-little-lemon/styles.css
@@ -52,38 +52,64 @@ background: #c8102E;
 color: #EDEFEE;
 }
 
-/*Main heading and sub-heading*/
+/*banner style*/
 
+.banner-section {
+    position: relative;
+}
 
+.banner-section img {
+    width: 100%;
+    height: auto;
+    object-fit: cover;
+    border-radius: 25px;
+}
 
-h1 {
-    color:#49796B;
+.banner-overlay {
+    position: absolute;
+    top:0;
+    left:0;
+    width:100%;
+    height: 100%;
+    border-radius: 25px;
+    background-color: rgba(0, 0, 0, 0.8);
+}
+
+.banner-text {
+    position: absolute;
+    top:50%;
+    left:50%;
+    transform: translate(-50%, -50%);
+    text-align: center;
+    color:#EDEFEE;
+    z-index: 1;
+}
+
+.banner-text h1 {
+    color:#EDEFEE;
     font-size: 3rem;
-    margin-left: 5%;
+    margin-bottom: 10px;
     text-align: center;
     font-family: 'Lobster', cursive;
     transition: transform 2s;
 }
 
-h1:hover {
-    color:#c8102E;
-    transform: scale(1.5);
-    }
-
- .sub-heading {
-    color:#49796B;
+.banner-text p {
+    font-size: 1.2rem;
+    max-width: 70%;
+    margin: 0 auto;
     font-family: 'Pangolin', cursive;
-    font-size: 1.5rem;
-    padding-bottom: 2rem;
-    text-align: center;
-    vertical-align: middle; 
 }
 
-h1, .sub-heading, header > img {
+.banner h1, .banner p {
     animation: fadeInAnimation ease 3s;
     animation-iteration-count: 1;
     animation-fill-mode: forwards;
 }
+h1:hover {
+    color:#c8102E;
+    transform: scale(1.5);
+    }
 
 @keyframes fadeInAnimation {
     0% {
