--- a/meta-capstone-project/src/components/Nav.css
+++ b/meta-capstone-project/src/components/Nav.css
@@ -35,3 +35,23 @@
     text-decoration: none;
     color: black;
 }
+
+/*Media query */
+
+@media (max-width: 768px) {
+    .navbar{
+        padding: 10px;
+    }
+
+    .logo {
+        max-width: 200px;
+    }
+
+    .nav-menu {
+        padding-right: 20px;
+    }
+
+    .nav-menu li {
+        margin-right: 20px;
+    }
+}
