added media query code

--- a/meta-capstone-project/src/styles/HeaderStyle.css
+++ b/meta-capstone-project/src/styles/HeaderStyle.css
@@ -55,3 +55,23 @@ restaurant-banner {
     max-width: 100%;
     height: auto;
 }
+
+/*Media query */
+
+@media (max-width: 768px) {
+    .navbar{
+        padding: 10px;
+    }
+
+    .logo {
+        max-width: 200px;
+    }
+
+    .nav-menu {
+        padding-right: 20px;
+    }
+
+    .nav-menu li {
+        margin-right: 20px;
+    }
+}
