--- a/meta-capstone-project/src/styles/FooterStyle.css
+++ b/meta-capstone-project/src/styles/FooterStyle.css
@@ -2,9 +2,10 @@
     background-color: #495E57;
     color: #fff;
     padding: 20px;
-    position: fixed;
+    position: relative;
     bottom: 0;
     width: 100%;
+    overflow: hidden;
 }
 
 /*Footer columns*/
