--- a/meta-capstone-project/src/styles/HeaderStyle.css
+++ b/meta-capstone-project/src/styles/HeaderStyle.css
@@ -1,7 +1,6 @@
 .header {
     background-color: #495E57;
     color: #EDEFEE;
-    padding: 20px;
     display: flex;
     justify-content: space-between;
     align-items: center;
@@ -13,7 +12,7 @@
     justify-content: space-between;
     align-items: center;
     width: 100%;
-    max-width: 1200px;
+    max-width: 900px;
     margin: 0 auto;
 }
 
@@ -52,9 +51,11 @@
     text-align: right;
 }
 
-restaurant-banner {
-    max-width: 100%;
+.restaurant-banner {
+    max-width: 80%;
     height: auto;
+    margin-bottom: -10%;
+    border-radius: 16px;
 }
 
 /*Media query */
