--- a/meta-capstone-project/src/styles/HeaderStyle.css
+++ b/meta-capstone-project/src/styles/HeaderStyle.css
@@ -12,7 +12,7 @@
     justify-content: space-between;
     align-items: center;
     width: 100%;
-    max-width: 900px;
+    max-width: 90%;
     margin: 0 auto;
 }
 
@@ -22,18 +22,21 @@
 
 .restaurant-title {
     color: #F4CE14;
-    font-size: 36px;
+    font-size: 3.6rem;
+    margin-top: -8.125rem;
+    margin-bottom: -2rem;
 }
 
 .restaurant-subtitle {
     color: #EDEFEE;
-    font-size: 24px;
+    font-size: 2.4rem;
+    margin-bottom: 2rem;
 }
 
 .restaurant-description {
     color: #EDEFEE;
-    font-size: 18px;
-    margin-bottom: 20px;
+    font-size: 1.8rem;
+    margin-bottom: 2%;
 }
 
 .read-more-button {
@@ -41,9 +44,10 @@
     border-radius: 5px;
     color: black;
     border: none;
-    padding: 10px 20px;
-    font-size: 16px;
+    padding: 1% 2%;
+    font-size: 1rem;
     cursor: pointer;
+    margin-top: 4rem;
 }
 
 .header-right {
@@ -55,7 +59,7 @@
     max-width: 80%;
     height: auto;
     margin-bottom: -10%;
-    border-radius: 16px;
+    border-radius: 1rem;
 }
 
 /*Media query */
@@ -63,7 +67,7 @@
 /* Media query for screens smaller than 768px */
 @media (max-width: 768px) {
     .header {
-        padding: 10px;
+        padding: 2%;
         flex-direction: column;
         text-align: center;
     }
@@ -78,19 +82,19 @@
     }
 
     .restaurant-title {
-        font-size: 24px;
+        font-size: 2.4rem;
     }
 
     .restaurant-subtitle {
-        font-size: 18px;
+        font-size: 1.8rem;
     }
 
     .restaurant-description {
-        font-size: 14px;
+        font-size: 1.4rem;
     }
 
     .read-more-button {
-        font-size: 14px;
+        font-size: 1.4rem;
     }
 
     .restaurant-banner {
