--- a/meta-capstone-project/src/styles/HeaderStyle.css
+++ b/meta-capstone-project/src/styles/HeaderStyle.css
@@ -66,6 +66,7 @@
     height: auto;
     margin-bottom: -10%;
     border-radius: 1rem;
+    box-shadow: 0 5px 15px rgba(0, 0, 0, 0.2);
 }
 
 /*Media query */
