--- a/meta-capstone-project/src/styles/SpecialOffersStyle.css
+++ b/meta-capstone-project/src/styles/SpecialOffersStyle.css
@@ -1,26 +1,31 @@
 .container {
-    align-items: center;
     display: flex;
-    flex-wrap: wrap;
+    flex-wrap: wrap; /* Allow for wrapping if the container is too narrow */
     justify-content: center;
+    align-items: center;
     margin: 0 auto;
     max-width: 100%;
-    padding: 10px;
+    padding: 1rem;
+
+}
+
+main-header {
+    text-align: center;
 }
 
 .card {
-    border-radius: 25px;
-    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
+    flex: 1;
+    border-radius: 1rem;
+    box-shadow: 0 0.25rem 0.5rem 0 rgba(0, 0, 0, 0.2);
     box-sizing: border-box;
     cursor: pointer;
     display: flex;
     flex-direction: column;
-    height: 100%;
     justify-content: space-between;
-    margin: 10px;
-    padding: 10px;
+    margin: 1rem;
+    padding: 1rem;
     transition: transform 0.2s;
-    width: calc(33.33% - 50px);
+    width: calc(33.33% - 1.25rem);
 }
 
 .card p {
@@ -31,13 +36,13 @@
 
 .card:hover {
 background-color:#FFE5B4;
-box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2);
+box-shadow: 0 0.5rem 1rem 0 rgba(0, 0, 0, 0.2);
 transform: scale(1.1);
 }
 
 .card img {
-    border-radius: 25px;
-    height: 200px;
+    border-radius: 1.5625rem; 
+    height: 12.5rem;
     object-fit: cover;
     width: 100%;
 }
