--- a/meta-capstone-project/src/styles/SpecialOffersStyle.css
+++ b/meta-capstone-project/src/styles/SpecialOffersStyle.css
@@ -1,16 +1,46 @@
 .container {
     display: flex;
-    flex-wrap: wrap; /* Allow for wrapping if the container is too narrow */
-    justify-content: center;
-    align-items: center;
+    flex-wrap:wrap;
+    justify-content: flex-start;
+    align-items: flex-start;
     margin: 0 auto;
     max-width: 100%;
     padding: 1rem;
 
 }
 
-main-header {
-    text-align: center;
+.main-header {
+    color: black;
+    text-align: left;
+    font-size: 2.5rem;
+    margin: 10rem 0rem 5rem 5rem;
+   
+}
+
+.online-menu-button {
+    background-color: #F4CE14;
+    border-radius: 5px;
+    color: black;
+    border: none;
+    padding: 1% 2%;
+    font-size: 1rem;
+    cursor: pointer;
+    margin-top: 4rem;
+    transition: background-color 0.3s;
+
+    &:hover {
+        background-color: orange;
+        color: black;
+    }
+}
+
+.cards-container {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    align-items: center;
+    margin-top: 1rem;
+    width: 100%;
 }
 
 .card {
@@ -22,20 +52,20 @@ main-header {
     display: flex;
     flex-direction: column;
     justify-content: space-between;
-    margin: 1rem;
+    margin: 1rem; /* margin-top, margin-right, margin-bottom, margin-left */
     padding: 1rem;
     transition: transform 0.2s;
     width: calc(33.33% - 1.25rem);
 }
 
 .card p {
-    color:#49796B;
+    color:black;
     font-family: 'Pangolin', cursive;
     text-align: center;
+    
 }
 
 .card:hover {
-background-color:#FFE5B4;
 box-shadow: 0 0.5rem 1rem 0 rgba(0, 0, 0, 0.2);
 transform: scale(1.1);
 }
@@ -54,23 +84,14 @@ h2 {
     text-align: center;
 }
 
-button {
-    align-self: center;
-    border: none;
-    background-color: #c8102E;
-    border-radius: 25px;
-    color: #EDEFEE;
-    cursor: pointer;
-    display: inline-block;
-    font-family: 'Pangolin', cursive;
-    font-size: 18px;
-    padding: 10px 20px;
-    text-align: center;
+.card-button {
     text-decoration: none;
-    transition: 0.8s;
+    font-weight: bold;
+    color: black;
+    cursor: pointer;
 }
 
-button:hover {
-    background: #49796B;
-    color: #EDEFEE;
-    }
+.card-button:hover {
+    font-weight: bold;
+    font-size: 1.25rem;
+}
