update styling rules

--- a/meta-capstone-project/src/styles/HeaderStyle.css
+++ b/meta-capstone-project/src/styles/HeaderStyle.css
@@ -39,7 +39,7 @@
     margin-bottom: 2%;
 }
 
-.read-more-button {
+.reserve-a-table-button {
     background-color: #F4CE14;
     border-radius: 5px;
     color: black;
