--- a/meta-capstone-project/src/styles/HeaderStyle.css
+++ b/meta-capstone-project/src/styles/HeaderStyle.css
@@ -20,34 +20,39 @@
 }
 
 .restaurant-title {
+    font-family: 'Markazi Text', sans-serif;
     color: #F4CE14;
-    font-size: 3.6rem;
-    margin-top: 0.5rem;
+    font-size: 5rem;
+    margin-top: 1rem;
     margin-bottom: -2rem;
 }
 
 .restaurant-subtitle {
+    font-family: 'Markazi Text', sans-serif;
     color: #EDEFEE;
-    font-size: 2.4rem;
+    font-size: 3rem;
     margin-bottom: 2rem;
+    margin-top: 1rem;
 }
 
 .restaurant-description {
+    font-family: 'Karla', sans-serif;
     color: #EDEFEE;
-    font-size: 1.8rem;
-    line-height: 2.5em;
+    font-size: 1.1125rem;
+    line-height: 1.5em;
     margin-bottom: 2%;
 }
 
 .reserve-a-table-button {
+    font-family: 'Karla', sans-serif;
     background-color: #F4CE14;
     border-radius: 5px;
     color: black;
     border: none;
     padding: 1% 2%;
-    font-size: 1rem;
+    font-size: 1.125rem;
     cursor: pointer;
-    margin-top: 4rem;
+    margin-top: 1rem;
     transition: background-color 0.3s;
 
     &:hover {
