src/styles/NavStyle.css

--- a/meta-capstone-project/src/styles/NavStyle.css
+++ b/meta-capstone-project/src/styles/NavStyle.css
@@ -34,6 +34,8 @@
 }
 
 .nav-menu a {
+    font-family: 'Karla', sans-serif;
+    font-size: 1.125rem;
     text-decoration: none;
     color: black;
 }
