--- a/meta-capstone-project/src/styles/SpecialOffersStyle.css
+++ b/meta-capstone-project/src/styles/SpecialOffersStyle.css
@@ -20,15 +20,18 @@
 }
 
 .online-menu-button {
+    font-family: 'Karla', sans-serif;
     background-color: #F4CE14;
     border-radius: 5px;
     color: black;
     border: none;
     padding: 1% 2%;
-    font-size: 1rem;
+    font-size: 1.125rem;
     cursor: pointer;
-    margin-top: 0;
+    margin-top: 1rem;
     transition: background-color 0.3s;
+    height: 3rem;
+    width: 12rem;
 
     &:hover {
         background-color: orange;
