--- a/meta-capstone-project/src/styles/HeaderStyle.css
+++ b/meta-capstone-project/src/styles/HeaderStyle.css
@@ -54,6 +54,8 @@
     cursor: pointer;
     margin-top: 1rem;
     transition: background-color 0.3s;
+    height: 3rem;
+    width: 12rem;
 
     &:hover {
         background-color: orange;
