--- a/meta-capstone-project/src/styles/SpecialOffersStyle.css
+++ b/meta-capstone-project/src/styles/SpecialOffersStyle.css
@@ -15,7 +15,7 @@
     color: black;
     text-align: left;
     font-size: 4.5rem;
-    margin: 10rem 0rem 5rem -1rem;
+    margin: 3rem 0rem 5rem -1rem;
    
 }
 
@@ -28,7 +28,7 @@
     padding: 1% 2%;
     font-size: 1.125rem;
     cursor: pointer;
-    margin-top: 1rem;
+    margin-top: 3rem;
     transition: background-color 0.3s;
     height: 3rem;
     width: 12rem;
@@ -44,12 +44,12 @@
     flex-wrap: wrap;
     justify-content: center;
     align-items: center;
-    margin-top: 1rem;
-    width: 100%;
+    margin: 1rem 0 3rem 6rem;
+    max-width: 90%; /* Use a relative max-width to limit container width */
 }
 
 .card {
-    flex: 1;
+    flex: 0 0 calc(30% - 1.25rem); /* Adjust the width value to make the cards narrower */
     border-radius: 1rem;
     box-shadow: 0 0.25rem 0.5rem 0 rgba(0, 0, 0, 0.2);
     box-sizing: border-box;
@@ -57,15 +57,14 @@
     display: flex;
     flex-direction: column;
     justify-content: space-between;
-    margin: 1rem; /* margin-top, margin-right, margin-bottom, margin-left */
+    margin: 1rem;
     padding: 1rem;
     transition: transform 0.2s;
-    width: calc(33.33% - 1.25rem);
 }
 
 .card p {
     color:black;
-    font-family: 'Pangolin', cursive;
+    font-family: 'Karla', sans-serif;
     text-align: center;
     
 }
@@ -83,8 +82,8 @@ transform: scale(1.1);
 }
 
 h2 {
-    color: #c8102E;
-    font-family: 'Lobster', cursive;
+    color: black;
+    font-family: 'Karla', sans-serif;
     font-size: 2rem;
     text-align: center;
 }
