--- a/meta-capstone-project/src/styles/SpecialOffersStyle.css
+++ b/meta-capstone-project/src/styles/SpecialOffersStyle.css
@@ -39,6 +39,8 @@
     }
 }
 
+/* Cards styling */
+
 .cards-container {
     display: flex;
     flex-wrap: wrap;
@@ -66,7 +68,7 @@
     color: #333333;
     font-family: 'Karla', sans-serif;
     text-align: justify;
-    margin-left: 1rem;
+    margin: 1rem 0 5rem 1rem;
     
 }
 
@@ -101,15 +103,21 @@ transform: scale(1.1);
     text-align: right;
 }
 
-.card-button {
+.order-delivery-button {
     text-decoration: none;
     font-weight: bold;
     color: #333333;
     cursor: pointer;
-    margin: 3rem 0 1rem 1rem;
+    margin-left: 1rem;
 }
 
-.card-button:hover {
+.my-custom-icon {
+    color: #333333;
+    font-size: 1rem;
+    margin-left: 1rem;
+  }
+
+.order-delivery-button:hover {
     font-weight: bold;
     font-size: 1.25rem;
 }
