--- a/meta-capstone-project/src/styles/SpecialOffersStyle.css
+++ b/meta-capstone-project/src/styles/SpecialOffersStyle.css
@@ -128,7 +128,7 @@ transform: scale(1.1);
     .main-header {
         text-align: center;
         font-size: 4.5rem;
-        margin: 2rem 0 0 1rem;
+        margin: 6rem 0 0 1rem;
        
     }
 
@@ -139,7 +139,7 @@ transform: scale(1.1);
         padding: 1% 2%;
         font-size: 1.125rem;
         cursor: pointer;
-        margin-top: 2.5rem;
+        margin: 2.5rem 0 2.5rem 0;
         height: 3rem;
         width: 12rem;
     }
@@ -149,7 +149,7 @@ transform: scale(1.1);
     .cards-container {
       flex-direction: column; /* Stack cards vertically */
       align-items: center;
-      margin-left: 1.5rem;
+      margin-left: 2.5rem;
     }
   
     .card {
