--- a/meta-capstone-project/src/styles/SpecialOffersStyle.css
+++ b/meta-capstone-project/src/styles/SpecialOffersStyle.css
@@ -59,7 +59,7 @@
     display: flex;
     flex-direction: column;
     justify-content: space-between;
-    margin: 1rem;
+    margin: 1rem 3rem 8rem 0;
     padding: 1rem;
     transition: transform 0.2s;
 }
@@ -149,7 +149,7 @@ transform: scale(1.1);
     .cards-container {
       flex-direction: column; /* Stack cards vertically */
       align-items: center;
-      margin-left: 2.5rem;
+      margin: 1rem 2rem 1rem 2rem; /* Adjust margins for stacking */
     }
   
     .card {
