--- a/meta-capstone-project/src/styles/AboutStyles.css
+++ b/meta-capstone-project/src/styles/AboutStyles.css
@@ -51,30 +51,17 @@
 }
 
 .about-image-container {
-    position: relative;
-    width: 100%; /* Adjust the width as needed */
-    max-width: 100%;
-    height: auto; /* Set the height to auto */
-    box-sizing: border-box;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
 }
 
-.about-image-a, .about-image-b {
-    max-width: 100%;
+.about-image-a-container {
+    max-width: 40%;
     height: auto;
-    margin-bottom: 0;
-    border-radius: 1rem;
-    box-shadow: 0 5px 15px rgba(0, 0, 0, 0.2);
-    position: absolute;
-    top: -15rem;
 }
 
-.about-image-a {
-    left: 0;
-    z-index: 1;
-}
-
-.about-image-b {
-    right: 0;
-    z-index: 2;
-    width: 50%;
+.about-image-b-container {
+    max-width: 40%;
+    height: auto;
 }
