--- a/meta-capstone-project/src/styles/AboutStyles.css
+++ b/meta-capstone-project/src/styles/AboutStyles.css
@@ -86,7 +86,7 @@
     max-width: 100%;
 }
 
-@media (max-width: 768px) {
+@media (max-width: 768px) and (max-width: 1024px) {
    .about-content {
     display: flex;
     flex-direction: column;
